.k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-tracker-api-deployment
  namespace: expense-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-tracker-api
  template:
    metadata:
      labels:
        app: expense-tracker-api
    spec:
      containers:
        - name: expense-tracker-api
          image: digitalphoenixx/expense-tracker-api:latest
          imagePullPolicy: "IfNotPresent"
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
