.k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-tracker-api-ingress
  namespace: expense-tracker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: expense-tracker-api.digitalphoenixx.live
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: expense-tracker-api-service
            port:
              number: 8000
